--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(posixify)
 export(read.socrata)
 export(validateUrl)
 export(write.socrata)
+export(write_socrata)
 importFrom(httr,GET)
 importFrom(httr,build_url)
 importFrom(httr,content)
